<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  android:weightSum="1">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/et_url"
			android:id="@+id/textView"/>

		<EditText
			android:id="@+id/link_url"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:ems="10"
			android:hint="@string/url_text"
			android:includeFontPadding="true"
			android:text="@string/http_prefix"
			android:inputType="textUri"
			android:minLines="2"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/d_text"/>

		<EditText
			android:id="@+id/link_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:ems="10"
			android:hint="@string/e_text"
			android:includeFontPadding="true"
			android:inputType="textMultiLine"
			android:minLines="2"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingBottom="8dp"
		android:paddingTop="8dp"
		android:weightSum="10">

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="4"
			android:gravity="center_vertical"
			android:text="@string/privacy_text"
			android:textSize="16sp"/>

		<Switch
			android:id="@+id/note_privacy"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="6"
			android:gravity="center_vertical"
			android:textOff="Public"
			android:textOn="Private"
			android:textSize="@dimen/material_editText_text_size"/>
	</LinearLayout>
</LinearLayout>