<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:app="http://schemas.android.com/apk/res-auto"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				tools:context="udacity.gas.com.solveaproblem.AddProblem">

	<include
		android:id="@+id/app_bar"
		layout="@layout/app_bar"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="48dp"
		android:layout_below="@id/app_bar">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/back_border"
				android:padding="16dp"
				android:text="@string/ux_support_text"
				android:textAllCaps="true"
				android:textColor="@android:color/background_light"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="16dp"
				android:paddingTop="22dp"
				>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/material_label_text_margin_bottom"
					android:text="@string/title"
					android:textSize="@dimen/material_label_text_size"
					/>

				<EditText
					android:id="@+id/etTitle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/hint_title"
					android:inputType="text"
					android:textSize="@dimen/material_editText_text_size"
					/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/material_label_text_margin_bottom"
					android:layout_marginTop="@dimen/material_label_text_margin_top"
					android:text="@string/description"
					android:textSize="@dimen/material_label_text_size"/>

				<EditText
					android:id="@+id/etDescription"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:ems="10"
					android:hint="@string/hint_description"
					android:inputType="textMultiLine"
					android:textSize="@dimen/material_editText_text_size"
					/>

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/material_label_text_margin_top"
					android:background="@color/background_material_light"
					android:padding="8dp"
					android:text="@string/privacy_statement"
					android:textSize="@dimen/material_label_text_size"/>

				<Switch
					android:id="@+id/swPrivacy"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="16dp"
					android:layout_marginTop="8dp"
					android:gravity="center_vertical"
					android:textOn="@string/privacy"
					android:textOff="Public"
					android:textSize="@dimen/material_editText_text_size"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

	<SlidingDrawer
		android:id="@+id/slidingDrawer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:content="@+id/content"
		android:handle="@+id/handle"
		>

		<LinearLayout
			android:id="@+id/content"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:background="@android:color/white"
			android:orientation="vertical">

			<it.neokree.materialtabs.MaterialTabHost
				android:id="@+id/tabs"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				app:accentColor="@color/accentColor"
				app:primaryColor="@color/primaryColor"
				app:textColor="#FFFFFF"
				/>

			<android.support.v4.view.ViewPager
				android:id="@+id/pager"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/handle"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:background="@drawable/button_bg"
			android:gravity="center"
			android:orientation="horizontal"
			android:weightSum="5"
			>

			<ImageButton
				android:id="@+id/bt_close_attach_window"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_gravity="start"
				android:layout_weight="2"
				android:background="@color/transparentBlack"
				android:contentDescription="@string/icon_description_text"
				android:gravity="start"
				android:src="@drawable/navigation_cancel"
				android:visibility="gone"
				/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_gravity="center"
				android:layout_weight="1"
				android:gravity="center">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:gravity="center"
					android:minHeight="@dimen/abc_action_button_min_height_material"
					android:text="@string/attach_files_text"
					android:textColor="@android:color/white"/>

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/content_new_attachment"
					android:contentDescription="@string/icon_description_text"
					android:gravity="center"
					/>
			</LinearLayout>

			<ImageButton
				android:id="@+id/bt_confirm_attach_window"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_gravity="end"
				android:layout_weight="2"
				android:background="@color/transparentBlack"
				android:clickable="false"
				android:contentDescription="@string/icon_description_text"
				android:gravity="end"
				android:src="@drawable/navigation_accept"
				android:visibility="gone"
				/>
			<!--Making the confirm button on clickable for the confirm button-->
		</LinearLayout>
	</SlidingDrawer>
</RelativeLayout>