<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	android:id="@+id/card_view"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:layout_margin="8dp"
	card_view:cardBackgroundColor="@android:color/white"
	card_view:cardCornerRadius="2dp"
	card_view:cardElevation="3dp"
	card_view:cardPreventCornerOverlap="true"
	card_view:cardUseCompatPadding="false"
	card_view:contentPadding="0dp"
	card_view:contentPaddingBottom="0dp"
	card_view:contentPaddingLeft="0dp"
	card_view:contentPaddingRight="0dp"
	card_view:contentPaddingTop="0dp"
	card_view:paddingEnd="0dp"
	card_view:paddingStart="0dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="0dp"
		android:orientation="vertical"
		android:padding="0dp"
		android:weightSum="1"
		card_view:cardCornerRadius="4dp">

		<TextView
			android:id="@+id/problemTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#21897E"
			android:gravity="center_vertical"
			android:text="@string/project_title"
			android:textAlignment="center"
			android:textAllCaps="true"
			android:textColor="@color/colorHighlight"
			android:textIsSelectable="true"
			android:textSize="24sp"
			android:paddingLeft="16dp"
			android:paddingTop="12dp"
			android:paddingBottom="12dp"
			android:paddingRight="16dp"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#83C9F4"
			android:orientation="vertical">

			<TextView
				android:id="@+id/problemDescription"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="16dp"
				android:paddingRight="16dp"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:textIsSelectable="true"
				android:text="@string/problem_description"
				android:textSize="16sp"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="end"
				android:orientation="horizontal"
				android:padding="0dp"
				android:paddingLeft="@dimen/actions_padding_left"
				android:paddingRight="@dimen/actions_padding_left"
				>

				<ImageButton
					android:id="@+id/problemEdit"
					style="@style/card.native.actions.button"
					android:layout_marginRight="8dp"
					android:background="?android:selectableItemBackground"
					android:scaleType="center"
					android:src="@drawable/ic_editor_mode_edit"
					android:contentDescription="@string/edit"/>

				<ImageButton
					android:id="@+id/problemShare"
					style="@style/card.native.actions.button"
					android:layout_marginRight="8dp"
					android:background="?android:selectableItemBackground"
					android:scaleType="center"
					android:src="@drawable/social_share"
					android:contentDescription="@string/share"/>

				<ImageButton
					android:id="@+id/problemDelete"
					style="@style/card.native.actions.button"
					android:layout_marginRight="8dp"
					android:background="?android:selectableItemBackground"
					android:scaleType="center"
					android:src="@drawable/ic_action_delete"
					android:contentDescription="@string/delete"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

</android.support.v7.widget.CardView>